Pull request #145: Lilic/MM-7661 dyn base url huawei
Merge in MML/infobip-mobile-messaging-huawei from lilic/MM-7661-dyn-base-url-huawei to master

Squashed commit of the following:

commit 203020b08373720e327da04920b467cb353e0651
Author: lilic <luka.ilic@infobip.com>
Date:   Mon Nov 24 13:46:06 2025 +0100

    Add API_URI_PROVIDED_BY_INTEGRATOR property for integrator configuration

commit 1c9163683a4415497cbb13e6a5ce20c2d1477455
Author: lilic <luka.ilic@infobip.com>
Date:   Mon Nov 24 13:39:33 2025 +0100

    Fix dynamic base URL thread safety and HTTP/2 compatibility, sync with Android SDK 14.7.7